# lib/api-spec/openapi.yaml
@@ -993,7 +993,7 @@ components:
 
     Settings:
       type: object
-      required: [companyName, phone, email, logoUrl, accentColor, loginGlowColor, contentBarColor, sidebarColor, loginPanelBg, loginRightBg, contentBg, smsCredit, smsLowStock, smsDaily, smsDailyTime, smsSenderId]
+      required: [companyName, phone, email, logoUrl, accentColor, loginGlowColor, contentBarColor, sidebarColor, loginPanelBg, loginRightBg, contentBg, smsCredit, smsLowStock, smsDaily, smsDailyTime, smsRecipients, smsSenderId]
       properties:
         companyName:
           type: string
@@ -1025,6 +1025,10 @@ components:
           type: boolean
         smsDailyTime:
           type: string
+        smsRecipients:
+          type: array
+          items:
+            type: string
         smsSenderId:
           type: string
 
@@ -1061,6 +1065,10 @@ components:
           type: boolean
         smsDailyTime:
           type: string
+        smsRecipients:
+          type: array
+          items:
+            type: string
         smsSenderId:
           type: string
 
